--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-*~
+*~  
 *-dev
 modules.order
 Module.symvers
 Mkfile.old
-dkms.conf
 core.*
 #*
 .#*
 \#*
+*.local
+\#*
+.cvsignore
+*_old/
+*PVs.list
+*-loc/*.Makefile
+ethmod/*.Makefile
