--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -1,16 +1,20 @@
-EPICS_MODULE_NAME:=ethmod
-# This is the module source tag
-# *) individual tags
-#    export EPICS_MODULE_TAG:=tags/1.1.1
-# *) master branch 
-#    export EPICS_MODULE_TAG:=master
-# *) individual hash 
-export EPICS_MODULE_TAG:=master
-export EPICS_MODULE_SRC_PATH:=ethmod
-export ESS_MODULE_MAKEFILE:=$(EPICS_MODULE_NAME).Makefile
-export PROJECT:=$(EPICS_MODULE_NAME)
-export LIBVERSION:=0.0.1
-export E3_ENV_PATH:=e3-env
-export E3_ENV_NAME:=e3-env
-#export E3_ENV_NAME:=E3_ENV_CONF
-#export E3_ENV_TAG:=v0.1
+#
+VARS_EXCLUDES := $(.VARIABLES)
+
+ifneq (,$(findstring dev,$(MAKECMDGOALS)))
+include $(TOP)/configure/RELEASE_DEV
+else
+include $(TOP)/configure/RELEASE
+endif
+
+ifneq (,$(findstring dev,$(MAKECMDGOALS)))
+include $(TOP)/configure/CONFIG_MODULE_DEV
+else
+include $(TOP)/configure/CONFIG_MODULE
+endif
+
+E3_REQUIRE_LOCATION := $(EPICS_BASE)/$(E3_REQUIRE_NAME)/$(E3_REQUIRE_VERSION)
+REQUIRE_CONFIG := $(E3_REQUIRE_LOCATION)/configure
+
+include $(REQUIRE_CONFIG)/CONFIG
+
